hphp/test/slow/hhbbc/jmp_local_008.php.expectf
Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: x' in %s/jmp_local_008.php:4
Stack trace:
%A
